[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menu_UI/Multiplayer/Host_game_dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menu_UI/Multiplayer/Multiplayer_UI.gd" type="Script" id=2]
[ext_resource path="res://Menu_UI/Multiplayer/Join_game_dialog.tscn" type="PackedScene" id=3]

[node name="MultiplayerUI" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.85062
margin_bottom = 1.85059
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="VBC"]
margin_top = 477.0
margin_right = 47.0
margin_bottom = 497.0
disabled = true
text = "HOST"

[node name="Join" type="Button" parent="VBC"]
margin_top = 501.0
margin_right = 47.0
margin_bottom = 521.0
disabled = true
text = "JOIN"

[node name="Play_offline" type="Button" parent="VBC"]
margin_right = 12.0
margin_bottom = 20.0
text = "PLAY_OFFLINE"

[node name="Host_game_dialog" parent="." instance=ExtResource( 1 )]

[node name="Join_game_dialog" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="VBC/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="VBC/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="VBC/Play_offline" to="." method="_on_Play_offline_pressed"]
